# serialflex

./: CMakeLists.txt  README.md
example/: main.cpp
include/serialflex/: field.h  serialize.h  traits.h
include/serialflex/json/: decoder.h  encoder.h
include/serialflex/protobuf/: decoder.h  encoder.h  writer.h
include/serialflex/xml/: decoder.h  encoder.h
src/: node.h
src/json/: decoder.cpp  encoder.cpp  reader.cpp  reader.h  writer.cpp  writer.h
src/protobuf/: decoder.cpp  encoder.cpp  reader.cpp  reader.h  writer.cpp
src/xml/: decoder.cpp  encoder.cpp  reader.cpp  reader.h  writer.cpp  writer.h
tool/json2cpp/include/: parser.h
tool/json2cpp/src/: parser.cpp  reader.cpp  reader.h
tool/json2cpp/tester/: main.cpp
tool/protoc/cmake/: libprotoc.cmake
tool/protoc/src/google/protobuf/compiler/: main.cc
tool/protoc/src/google/protobuf/compiler/class/: class_generator.cc  class_generator.h  class_serialize.cc  class_serialize.h
